--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@ VMware NSX provides an agile software-defined infrastructure to build cloud-nati
 
 NSX is designed for management, operation, and consumption by development organizations. NSX allows IT teams and development teams to select the technologies best suited for their applications.
 
-<a href="https://docs.vmware.com/en/VMware-NSX/4.1/nsx_41_admin.pdf">pdf file</a>
+<a href="sda_loans-fact_sheet-aug_2019.pdf">pdf file</a>
 </body>
 </html>
