--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="keywords" content="html tutorial template">
 </head>
 <body>
-  A wiki (/ˈwɪki/ ⓘ WICK-ee) is a form of hypertext publication on the internet which is collaboratively edited and managed by its audience directly through a web browser. A typical wiki contains multiple pages that can either be edited by the public or limited to use within an organization for maintaining its internal knowledge base. Its name derives from the first user-editable website called "WikiWikiWeb", with "wiki" being a Hawaiian word meaning "quick".[1]
+222A wiki (/ˈwɪki/ ⓘ WICK-ee) is a form of hypertext publication on the internet which is collaboratively edited and managed by its audience directly through a web browser. A typical wiki contains multiple pages that can either be edited by the public or limited to use within an organization for maintaining its internal knowledge base. Its name derives from the first user-editable website called "WikiWikiWeb", with "wiki" being a Hawaiian word meaning "quick".[1]
 Use the navigation on the left to browse the available NSX documentation including the API and CLI guides. To access the PDF format of NSX documentation, select a guide and click the  icon.
 VMware NSX provides an agile software-defined infrastructure to build cloud-native application environments. NSX focuses on providing networking, security, automation, and operational simplicity for emerging application frameworks and architectures that have heterogeneous endpoint environments and technology stacks. NSX supports cloud-native applications, bare metal workloads, public clouds, and multiple clouds.
 
