--- a/index.html
+++ b/index.html
@@ -6,11 +6,27 @@
 <meta name="keywords" content="html tutorial template">
 </head>
 <body>
-222A wiki (/ˈwɪki/ ⓘ WICK-ee) is a form of hypertext publication on the internet which is collaboratively edited and managed by its audience directly through a web browser. A typical wiki contains multiple pages that can either be edited by the public or limited to use within an organization for maintaining its internal knowledge base. Its name derives from the first user-editable website called "WikiWikiWeb", with "wiki" being a Hawaiian word meaning "quick".[1]
-Use the navigation on the left to browse the available NSX documentation including the API and CLI guides. To access the PDF format of NSX documentation, select a guide and click the  icon.
-VMware NSX provides an agile software-defined infrastructure to build cloud-native application environments. NSX focuses on providing networking, security, automation, and operational simplicity for emerging application frameworks and architectures that have heterogeneous endpoint environments and technology stacks. NSX supports cloud-native applications, bare metal workloads, public clouds, and multiple clouds.
+<div class="main-page-content">
+    <p>
+      222A wiki (/ˈwɪki/ ⓘ WICK-ee) is a form of hypertext publication on the internet which is collaboratively edited and managed by its audience directly through a web browser. A typical wiki contains multiple pages that can either be edited by the public or limited to use within an organization for maintaining its internal knowledge base. Its name derives from the first user-editable website called "WikiWikiWeb", with "wiki" being a Hawaiian word meaning "quick".[1]
+    </p>
 
-NSX is designed for management, operation, and consumption by development organizations. NSX allows IT teams and development teams to select the technologies best suited for their applications.
+    <p>
+      Use the navigation on the left to browse the available NSX documentation including the API and CLI guides. To access the PDF format of NSX documentation, select a guide and click the <span aria-label="PDF icon">📄</span> icon.
+    </p>
+
+    <p>
+      VMware NSX provides an agile software-defined infrastructure to build cloud-native application environments. NSX focuses on providing networking, security, automation, and operational simplicity for emerging application frameworks and architectures that have heterogeneous endpoint environments and technology stacks. NSX supports cloud-native applications, bare metal workloads, public clouds, and multiple clouds.
+    </p>
+
+    <p>
+      NSX is designed for management, operation, and consumption by development organizations. NSX allows IT teams and development teams to select the technologies best suited for their applications.
+    </p>
+
+    <p>
+      <a href="sda_loans-fact_sheet-aug_2019.pdf" download>Download PDF: sda_loans-fact_sheet-aug_2019.pdf</a>
+    </p>
+  </div>
 
 <a href="sda_loans-fact_sheet-aug_2019.pdf">pdf file</a>
 </body>
