--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="main-page-content">
     <p>
-      222A wiki (/ˈwɪki/ ⓘ WICK-ee) is a form of hypertext publication on the internet which is collaboratively edited and managed by its audience directly through a web browser. A typical wiki contains multiple pages that can either be edited by the public or limited to use within an organization for maintaining its internal knowledge base. Its name derives from the first user-editable website called "WikiWikiWeb", with "wiki" being a Hawaiian word meaning "quick".[1]
+      333 wiki (/ˈwɪki/ ⓘ WICK-ee) is a form of hypertext publication on the internet which is collaboratively edited and managed by its audience directly through a web browser. A typical wiki contains multiple pages that can either be edited by the public or limited to use within an organization for maintaining its internal knowledge base. Its name derives from the first user-editable website called "WikiWikiWeb", with "wiki" being a Hawaiian word meaning "quick".[1]
     </p>
 
     <p>
