--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
 <meta name="keywords" content="html tutorial template">
 </head>
 <body>
+
+<nav>
+    <a href="index.html">Home</a> |
+    <a href="second.html">Second Page</a>
+</nav>
+    
 <div class="main-page-content">
     <p>
-      333 wiki (/ˈwɪki/ ⓘ WICK-ee) is a form of hypertext publication on the internet which is collaboratively edited and managed by its audience directly through a web browser. A typical wiki contains multiple pages that can either be edited by the public or limited to use within an organization for maintaining its internal knowledge base. Its name derives from the first user-editable website called "WikiWikiWeb", with "wiki" being a Hawaiian word meaning "quick".[1]
+      Wikis are powered by wiki software, also known as wiki engines. Being a form of content management system, these differ from other web-based systems such as blog software or static site generators in that the content is created without any defined owner or leader. Wikis have little inherent structure, allowing one to emerge according to the needs of the users.
     </p>
 
     <p>
@@ -26,6 +32,8 @@
     <p>
       <a href="sda_loans-fact_sheet-aug_2019.pdf" download>Download PDF: sda_loans-fact_sheet-aug_2019.pdf</a>
     </p>
+
+    <a href="second.html">Go to Second Page</a>
   </div>
 
 <a href="sda_loans-fact_sheet-aug_2019.pdf">pdf file</a>
