--- a/second.htm
+++ b/second.htm
@@ -1,1 +1,22 @@
+<!doctype html>
+<html>
+<head>
+<title>Our Funky HTML Page</title>
+<meta name="description" content="Our first page">
+<meta name="keywords" content="html tutorial template">
+</head>
+<body>
 
+<nav>
+    <a href="index.html">Home</a> |
+    <a href="second.html">Second Page</a>
+</nav>
+    
+<div class="main-page-content">
+    <h1>Second Page</h1>
+    <p>This is the second page. Add more content here as needed.</p>
+    <p><a href="index.html">Back to Home</a></p>
+</div>
+  
+</body>
+</html>
