--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <nav>
     <a href="index.html">Home</a> |
-    <a href="second.html">Second Page</a>
+    <a href="second.htm">Second Page</a>
 </nav>
     
 <div class="main-page-content">
@@ -33,7 +33,7 @@
       <a href="sda_loans-fact_sheet-aug_2019.pdf" download>Download PDF: sda_loans-fact_sheet-aug_2019.pdf</a>
     </p>
 
-    <a href="second.html">Go to Second Page</a>
+    <a href="second.htm">Go to Second Page</a>
 </div>
     
     <a href="sda_loans-fact_sheet-aug_2019.pdf">pdf file</a>
