--- a/second.htm
+++ b/second.htm
@@ -15,7 +15,7 @@
 <div class="main-page-content">
     <h1>Second Page</h1>
     <p>This is the second page. Add more content here as needed.</p>
-    <p><a href="index.htm">Back to Home</a></p>
+    <p><a href="index.html">Back to Home</a></p>
 </div>
   
 </body>
