--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
     <a href="second.htm">Go to Second Page</a>
 </div>
-    
+
+    <p>This block must be absent in all Puppeteer Crawlers</p>
     <a href="sda_loans-fact_sheet-aug_2019.pdf">pdf file</a>
 
 </body>
