--- a/second.htm
+++ b/second.htm
@@ -17,6 +17,8 @@
     <p>This is the second page. Add more content here as needed.</p>
     <p><a href="index.html">Back to Home</a></p>
 </div>
+
+<p>This block must be absent in all Puppeteer Crawlers</p>
   
 </body>
 </html>
