--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </p>
 
     <a href="second.htm">Go to Second Page</a>
+    <a href="Harry_Potter_DE.htm">Harry Potter in Deutch</a>
 </div>
 
     <p>This block must be absent in all Puppeteer Crawlers</p>
